[Fix] white space between grid section and footer

--- a/src/components/gridImages/grid-images.module.css
+++ b/src/components/gridImages/grid-images.module.css
@@ -55,6 +55,6 @@
 }
 @media only screen and (max-width: 520px) {
   .gridImages {
-    padding-bottom: 20vh;
+    padding-bottom: 5vh;
   }
 }
